Document memory settings
This commit adds more details documentation about the memory settings that can
and can not be supplied to the Java buildpack and if the setting is likely to
effect the memory weighting in relation to the total memory provided to an
application.

[#78798560]